--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "node dist/index.js",
     "start:debug": "tsnd src/index.ts",
-    "build": "tsc",
+    "build": "tsc && mkdir -p dist/presentation/views && cp -r src/presentation/views dist/presentation/views",
     "clean": "rm -rf dist tsconfig.tsbuildinfo",
-    "build:clean": "npm run build && npm run build",
+    "build:clean": "npm run clean && npm run build",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "npm run lint -- --fix"
   },
