--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@expresso/ts-transformer-type-validator": "1.0.4",
     "@expresso/validator": "1.1.5",
     "bson-objectid": "1.3.0",
+    "ejs": "3.0.1",
     "i": "0.3.6",
     "jsonwebtoken": "8.5.1",
     "npm": "6.14.2",
