--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@expresso/validator": "1.1.5",
     "bson-objectid": "1.3.0",
     "ejs": "3.0.1",
+    "express-rescue": "1.1.26",
     "i": "0.3.6",
     "jsonwebtoken": "8.5.1",
     "npm": "6.14.2",
